# claws-mail-sync

./: AUTHORS  CMakeLists.txt  README
cmake/modules/: FindBlueZ.cmake  FindCheck.cmake  FindEDS.cmake  FindEDS1.0.cmake  FindEDS1.2.cmake  FindGConf2.cmake  FindGLIB2.cmake  FindGNOKII.cmake  FindKDEPIM3.cmake  FindLibSyncMl.cmake  FindOpenObex.cmake  FindOpenSync.cmake  FindPilotLink.cmake  FindPythonLibs.cmake  FindSWIG.cmake  FindSqlite.cmake
src/: CMakeLists.txt  claws-mail-descriptions.xml  claws_mail_connect.c  claws_mail_connect.h  claws_mail_contact.c  claws_mail_contact.h  claws_mail_event.c  claws_mail_event.h  claws_mail_sync.c  claws_mail_sync.h
