PROJECT( libopensync-plugin-claws-mail C )

SET( VERSION "0.34" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( GLIB2 REQUIRED )
FIND_PACKAGE( LibXml2 REQUIRED )

INCLUDE( OpenSyncInternal )

ADD_SUBDIRECTORY( src )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

